--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Curriculum Vitae de Chema Rodríguez García" />
+    <title>Chema Rodríguez García</title>
   </head>
   <body class="bg-gray-100 text-gray-800 font-sans flex items-center justify-center min-h-screen">
     <div id="root"></div>
