--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Curriculum Vitae de Chema Rodríguez García" />
     <title>Chema Rodríguez García</title>
   </head>
-  <body class="bg-gray-100 text-gray-800 font-sans flex items-center justify-center min-h-screen">
+  <body class="bg-background text-text font-sans flex items-center justify-center min-h-screen">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
