--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/fa_goblin.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Curriculum Vitae de Chema Rodríguez García" />
+    <meta name="description" content="Desarrollador frontend con más de 10 años de experiencia. Curriculum Vitae de Chema Rodríguez García" />
     <title>Chema Rodríguez García</title>
   </head>
   <body class="min-h-screen flex flex-col justify-center bg-background text-foreground">
